Revert "Corrected some spacing issues inside the form and informing/warning labels"
This reverts commit fccdbb0be2f5fd8d1647c89b051d12c20a4ac93b.

--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -1,12 +1,11 @@
-.c-info-search, .c-warn-searching {
+.c-info-search {
 
-    margin: 15px auto;
-    width: 80%;
+    text-align: center;
+    margin: 15px 0;
 
     p { /* restart default margin */
 
         margin: 0;
-        text-align: center;
     }
 }
 
@@ -28,7 +27,6 @@
         display: flex;
         flex-direction: column;
         width: 90%;
-        margin: 10px auto;
 
     }
 
@@ -39,11 +37,6 @@
     padding: 10px;
     justify-self: center;
 
-}
-
-tr:last-child .c-book-details{
-
-    border-bottom: 1px solid #dee2e6;
 }
 
 img{
@@ -86,13 +79,30 @@ img{
     }
 
     }
+
+
     
 }
 
-.c-warn-searching, .c-result-table, .c-spinner {
+.c-warn-searching, .c-result-table {
 
     margin: 30px auto;
    
+}
+
+.c-warn-searching{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    p{
+
+        margin: 0;
+        width: 80%;
+
+
+    }
 }
 
 /* For tablets and desktop */
@@ -107,7 +117,6 @@ img{
 
                 align-items: center;
                 width: 30%;
-                margin: auto;
         
             }
 
